--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="genderPicker">Select gender:</string>
     <string name="categoryPicker">Select category:</string>
     <string name="provincePicker">Select province:</string>
+    <string name="list">List</string>
 
     <string name="male">Male</string>
     <string name="female">Female</string>
